# atlas

./: Cargo.toml  LICENSE  README.md
benches/: map_to_curve.rs  multiset_hash.rs
circom/: input.json  main.circom  main.r1cs  main.sym  main_0000.zkey  main_0001.zkey  map_to_curve.circom  multiset_hash.circom  pot12_0001.ptau  powersOfTau28_hez_final_12.ptau  proof.json  public.json  run.sh  verification_key.json  witness.wtns
circom/main_js/: main.wasm
crates/bls/: Cargo.toml
crates/bls/src/: keypair.rs  large_message.rs  lib.rs  scheme.rs  signature.rs
crates/circuits/: Cargo.toml
crates/circuits/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  field.rs  lib.rs  memory.rs
crates/map-to-curve/: Cargo.toml
crates/map-to-curve/src/: lib.rs  relation.rs  subgroup.rs
crates/multiset-hash/: Cargo.toml
crates/multiset-hash/src/: digest.rs  hasher.rs  lib.rs  rolling.rs
examples/: bls_signature.rs  constraint_cost.rs  map_to_group.rs  multiset_hash.rs  zkvm_memory.rs
scripts/: generate_witness.rs
