[package]
name        = "atlas-map-to-curve"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
atlas-core  = { workspace = true }
ark-ff      = { workspace = true }
ark-ec      = { workspace = true }
ark-bn254   = { workspace = true }
ark-grumpkin = { workspace = true }
thiserror   = { workspace = true }